# project-templates

./: .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postCreateCommand.sh
.github/workflows/: check.yml  monorepo-actor-release.md  monorepo-actor-release.yml  monorepo-release.yml  monorepo_actor_release.yml
actor/echo/: Cargo.toml  Makefile  README.md  project-generate.toml
actor/echo-httpserver-preview2/: .gitignore  Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
actor/echo-httpserver-preview2/.github/workflows/: build.yml  release.yml
actor/echo-httpserver-preview2/src/: lib.rs
actor/echo-httpserver-preview2/wit/: deps.toml  echo.wit
actor/echo-messaging/: Cargo.toml  Makefile  README.md  wadm.yaml  wasmcloud.toml
actor/echo-messaging/.github/workflows/: build.yml  release.yml
actor/echo-messaging/src/: lib.rs
actor/echo-tinygo/: Makefile  README.md  echo.go  go.sum  wadm.yaml  wasmcloud.toml
actor/echo-tinygo-build/: .gitignore  README.md  go.mod  project-generate.toml
actor/echo-tinygo/.github/workflows/: build.yml  release.yml
actor/echo/.github/workflows/: release.yml
actor/echo/src/: lib.rs
actor/hello/: .gitignore  Cargo.toml  Makefile  README.md  project-generate.toml  wadm.yaml  wasmcloud.toml
actor/hello-build/: README.md
actor/hello-build/.github/workflows/: release.yml
actor/hello-build/src/: lib.rs
actor/hello/.github/: release.yml
actor/hello/.github/workflows/: build.yml  release.yml
actor/hello/src/: lib.rs
actor/hello_world/: Cargo.toml
actor/kvcounter/: Cargo.toml  wadm.yaml  wasmcloud.toml
actor/monorepo-actor/: Cargo.toml  Makefile  README.md  wasmcloud.toml
actor/monorepo-actor/.github/workflows/: release.yml
actor/monorepo-actor/src/: lib.rs
interface/converter-actor/: Makefile  converter.smithy  project-generate.toml  read.rs
interface/converter-actor/rust/: Cargo.toml
interface/converter-actor/rust/src/: lib.rs
interface/converter-provider/: Makefile  codegen.toml  converter.smithy  project-generate.toml
interface/factorial/: codegen.toml  factorial.smithy  project-generate.toml
interface/factorial/rust/: Cargo.toml
interface/factorial/rust/src/: lib.rs
provider/barebones-go/: .goreleaser.yml  Makefile  README.md  go.mod  go.sum  main.go  project-generate.toml
provider/factorial/: .gitignore  Cargo.toml  Makefile  README.md  project-generate.toml  provider.mk  provider_test_config.toml
provider/factorial/.github/workflows/: build.yml  release.yml
provider/factorial/src/: main.rs
provider/factorial/tests/: factorial_test.rs
provider/messaging/: Cargo.toml  Makefile  README.md  project-generate.toml
provider/messaging/.github/workflows/: release.yml
provider/messaging/src/: main.rs
src/: lib.rs
test/: generate-all-templates.sh
