[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
actor-core = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main" }

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
