[package]
name = "echo-messaging"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "echo_messaging"

[dependencies]
futures = "0.3"
serde_json = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-messaging = "0.8"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
