[package]
name = "{{project-name}}"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "{{to_snake_case project-name}}"

[dependencies]
futures = "0.3"
serde_json = "1.0"
wasmbus-rpc = "0.13"
wasmcloud-interface-messaging = "0.9"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true