[package]
name = "{{project-name}}"
version = "0.1.0"
authors = [ "" ]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "{{to_snake_case project-name}}"

[dependencies]
async-trait = "0.1"
console_log = "0.2"
futures = "0.3"
log = "0.4"
serde_bytes = "0.11"
serde_json ="1.0"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = "0.3"
wasmcloud-interface-httpserver = "0.1"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
