[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
wasmbus-rpc = "0.10"
wasmcloud-interface-factorial = "0.6"
wasmcloud-interface-httpserver = "0.7"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.5.0"
tokio = { version = "1.0", features = [ "full" ] }

[[bin]]
name = "{{to_snake_case project-name}}"
path = "src/main.rs"
