[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
tracing = "0.1.37"
wasmbus-rpc = { version = "0.15", features = ["otel"] }
wasmcloud-interface-factorial = "0.10"
wasmcloud-interface-httpserver = "0.12"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.9"
tokio = { version = "1", features = [ "full" ] }

[[bin]]
name = "{{to_snake_case project-name}}"
path = "src/main.rs"
