[package]
name = "{{project-name}}"
version = "0.1.0"
description = "Interface library for the {{ project-name }} {{ interface }} capability, {{ capability_id }}"
authors = [ "dev@example.com" ]
edition = "2021"
license = "Apache-2.0"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = [ "build.rs" ]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-trait = "0.1"
serde = { version = "1.0" , features = ["derive"] }
wasmbus-rpc = "0.6.0"

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.2"

